# jupyterlab-proxy-spark-webui

./: .gitignore  LICENSE  README.md  build.sh  package.json  pyproject.toml  start-lab.sh  tsconfig.json
docs/: _config.yml  index.md
jupyterlab_spark_webui/: __init__.py
src/: index.ts
style/: index.css
